<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_3d_perception</name>
  <version>0.1.0</version>
  <description>3D LiDAR segmentation: ground, trunks, obstacles. Base for TreeSLAM landmarks.</description>
  <maintainer email="tese@fe.up.pt">forest-hybrid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>forest_hybrid_msgs</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
