<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_pointcloud_semantics</name>
  <version>0.1.0</version>
  <description>Projeção / *painting* de etiquetas semânticas na nuvem LiDAR (calibração extrínseca) — esqueleto.</description>
  <maintainer email="tese@fe.up.pt">tese</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
