<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forest_semantic_fusion</name>
  <version>0.1.0</version>
  <description>Late fusion RGB semantic mask + LiDAR points for forest robotics.</description>
  <maintainer email="tese@fe.up.pt">tese</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs_py</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

